crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"l┌ keys ─────────────────────────────────────────────────────────────────────────────────────────┐ W"
"┌│ ↑ / k          previous entry / scroll up           M              clear the file's flags     │─┐"
"││ ↓ / j          next entry / scroll down             v              select lines               │]│"
"││ PgUp / b       page up                              y              copy selection             │]│"
"││ PgDn / Space   page down                            i              edit in place              │ │"
"││ ⏎ / l / →      open the diff                        I              $EDITOR at the hunk        │ │"
"││ Esc / h / ←    back to the file list (close help)   d              ack the agent flag         │ │"
"││ Tab            toggle focus                         g              jump to the agent in herdr │ │"
"││ n / ]          next hunk                            w              workspace scope on/off     │ │"
"││ p / [          previous hunk                        r              rescan now                 │ │"
"││ t              hide / show empty repos              R              reload the config file     │ │"
"││ a              accept the hunk under the cursor     e              expand a collapsed file    │ │"
"││ A              accept the whole file or repo        f              full paths                 │ │"
"││ Ctrl-A         accept everything listed             o              show org/repo              │ │"
"││ u              restore the hunk                     Opt-z (Ω) / Alt-z wrap long lines         │ │"
"││ U              restore the whole file               s              snooze this repo           │ │"
"││ z              undo the last accept                 S              show / hide snoozed repos  │ │"
"││ Home           first entry / top of diff            ?              this help                  │ │"
"││ End            last entry / end of diff             q / Ctrl-C     quit                       │ │"
"││ Alt-↑ / {      previous repository                  y / ⏎          confirm                    │ │"
"││ Alt-↓ / }      next repository                      n / Esc        cancel                     │ │"
"││ m              flag it with a note                                                            │ │"
"││                                                                                               │ │"
"││ ^J is a newline in the note (⇧⏎ needs a kitty-protocol terminal)                              │ │"
"││ drag selects text · v/y copies                                                                │ │"
"││ lastcall tui --tour shows the welcome again                                                   │ │"
"││                                                                                               │ │"
"││ any key closes                                                                                │ │"
"└└───────────────────────────────────────────────────────────────────────────────────────────────┘─┘"
"↑↓ select  ⏎ open  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
