crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_tall_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repo┌ keys ────────────────────────────────────────────────────────────┐      watching W"
"┌───────────────│ ↑ / k          previous entry / scroll up                        │───────────────┐"
"│alpha          │ ↓ / j          next entry / scroll down                          │U restore file]│"
"│  main · 3 file│ PgUp / b       page up                                           │store] [m flag]│"
"│  M f1  +1 −1  │ PgDn / Space   page down                                         │               │"
"│  M f2  +1 −0  │ ⏎ / l / →      open the diff                                     │               │"
"│  M parse.rs  +│ Esc / h / ←    back to the file list (close help)                │               │"
"│───────────────│ Tab            toggle focus                                      │               │"
"│beta           │ n / ]          next hunk                                         │               │"
"│  main · 2 file│ p / [          previous hunk                                     │               │"
"│  A u1  +1 −0  │ t              hide / show empty repos                           │               │"
"│  A u2  +2 −0  │ a              accept the hunk under the cursor                  │               │"
"│  [upstream] 1 │ A              accept the whole file or repo                     │               │"
"│───────────────│ Ctrl-A         accept everything listed                          │               │"
"│W/notes        │ u              restore the hunk                                  │               │"
"│  draft · 1 fil│ U              restore the whole file                            │               │"
"│  M n2.md  +2 −│ z              undo the last accept                              │               │"
"│               │ Home           first entry / top of diff                         │               │"
"│               │ End            last entry / end of diff                          │               │"
"│               │ Alt-↑ / {      previous repository                               │               │"
"│               │ Alt-↓ / }      next repository                                   │               │"
"│               │ J / shift-down extend selection down                             │               │"
"│               │ K / shift-up   extend selection up                               │               │"
"│               │ m              flag it with a note                               │               │"
"│               │ M              clear the file's flags                            │               │"
"│               │ v              select lines                                      │               │"
"│               │ y              copy selection                                    │               │"
"│               │ i              edit in place                                     │               │"
"│               │ I              $EDITOR at the hunk                               │               │"
"│               │ d              ack the agent flag                                │               │"
"│               │ g              jump to the agent in herdr                        │               │"
"│               │ w              workspace scope on/off                            │               │"
"│               │ r              rescan now                                        │               │"
"│               │ R              reload the config file                            │               │"
"│               │ e              expand a collapsed file                           │               │"
"│               │ f              full paths                                        │               │"
"│               │ o              show org/repo                                     │               │"
"│               │ Opt-z (Ω) / Alt-z wrap long lines                                │               │"
"│               │ s              snooze this repo                                  │               │"
"│               │ S              show / hide snoozed repos                         │               │"
"│               │ ?              this help                                         │               │"
"│               │ q / Ctrl-C     quit                                              │               │"
"│               │ y / ⏎          confirm                                           │               │"
"│               │ n / Esc        cancel                                            │               │"
"│               │                                                                  │               │"
"│               │ ^J is a newline in the note (⇧⏎ needs a kitty-protocol terminal) │               │"
"│               │ drag selects text · v/y copies                                   │               │"
"│               │ lastcall tui --tour shows the welcome again                      │               │"
"│               │                                                                  │               │"
"└───────────────│ any key closes                                                   │───────────────┘"
"↑↓ select  ⏎ ope└──────────────────────────────────────────────────────────────────┘uit             "
