crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_tall_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..16 Reset Reset BOLD
0 16..84 Cyan Reset -
1 0..17 Cyan Reset -
1 83..84 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 16..17 Cyan Reset -
2 83..84 Cyan Reset -
2 84..99 Reset Reset DIM
3 0..1 Cyan Reset -
3 16..17 Cyan Reset -
3 83..84 Cyan Reset -
3 84..99 Reset Reset REVERSED
4 0..1 Cyan Reset -
4 1..9 Reset Reset REVERSED
4 9..11 Green Reset REVERSED
4 11..12 Reset Reset REVERSED
4 12..14 Red Reset REVERSED
4 14..16 Reset Reset REVERSED
4 16..17 Cyan Reset -
4 83..84 Cyan Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 16..17 Cyan Reset -
5 83..84 Cyan Reset -
6 0..1 Cyan Reset -
6 15..16 Green Reset -
6 16..17 Cyan Reset -
6 83..84 Cyan Reset -
7 0..1 Cyan Reset -
7 1..16 Reset Reset DIM
7 16..17 Cyan Reset -
7 83..84 Cyan Reset -
8 0..1 Cyan Reset -
8 1..5 Reset Reset BOLD
8 16..17 Cyan Reset -
8 83..84 Cyan Reset -
9 0..1 Cyan Reset -
9 16..17 Cyan Reset -
9 83..84 Cyan Reset -
10 0..1 Cyan Reset -
10 9..11 Green Reset -
10 12..14 Red Reset -
10 14..16 Reset Reset DIM
10 16..17 Cyan Reset -
10 83..84 Cyan Reset -
11 0..1 Cyan Reset -
11 9..11 Green Reset -
11 12..14 Red Reset -
11 14..16 Reset Reset DIM
11 16..17 Cyan Reset -
11 83..84 Cyan Reset -
12 0..1 Cyan Reset -
12 16..17 Cyan Reset -
12 83..84 Cyan Reset -
13 0..1 Cyan Reset -
13 1..16 Reset Reset DIM
13 16..17 Cyan Reset -
13 83..84 Cyan Reset -
14 0..1 Cyan Reset -
14 1..8 Reset Reset BOLD
14 16..17 Cyan Reset -
14 83..84 Cyan Reset -
15 0..1 Cyan Reset -
15 16..17 Cyan Reset -
15 83..84 Cyan Reset -
16 0..1 Cyan Reset -
16 12..14 Green Reset -
16 15..16 Red Reset -
16 16..17 Cyan Reset -
16 83..84 Cyan Reset -
17 0..1 Cyan Reset -
17 16..17 Cyan Reset -
17 83..84 Cyan Reset -
18 0..1 Cyan Reset -
18 16..17 Cyan Reset -
18 83..84 Cyan Reset -
19 0..1 Cyan Reset -
19 16..17 Cyan Reset -
19 83..84 Cyan Reset -
20 0..1 Cyan Reset -
20 16..17 Cyan Reset -
20 83..84 Cyan Reset -
21 0..1 Cyan Reset -
21 16..17 Cyan Reset -
21 83..84 Cyan Reset -
22 0..1 Cyan Reset -
22 16..17 Cyan Reset -
22 83..84 Cyan Reset -
23 0..1 Cyan Reset -
23 16..17 Cyan Reset -
23 83..84 Cyan Reset -
24 0..1 Cyan Reset -
24 16..17 Cyan Reset -
24 83..84 Cyan Reset -
25 0..1 Cyan Reset -
25 16..17 Cyan Reset -
25 83..84 Cyan Reset -
26 0..1 Cyan Reset -
26 16..17 Cyan Reset -
26 83..84 Cyan Reset -
27 0..1 Cyan Reset -
27 16..17 Cyan Reset -
27 83..84 Cyan Reset -
28 0..1 Cyan Reset -
28 16..17 Cyan Reset -
28 83..84 Cyan Reset -
29 0..1 Cyan Reset -
29 16..17 Cyan Reset -
29 83..84 Cyan Reset -
30 0..1 Cyan Reset -
30 16..17 Cyan Reset -
30 83..84 Cyan Reset -
31 0..1 Cyan Reset -
31 16..17 Cyan Reset -
31 83..84 Cyan Reset -
32 0..1 Cyan Reset -
32 16..17 Cyan Reset -
32 83..84 Cyan Reset -
33 0..1 Cyan Reset -
33 16..17 Cyan Reset -
33 83..84 Cyan Reset -
34 0..1 Cyan Reset -
34 16..17 Cyan Reset -
34 83..84 Cyan Reset -
35 0..1 Cyan Reset -
35 16..17 Cyan Reset -
35 83..84 Cyan Reset -
36 0..1 Cyan Reset -
36 16..17 Cyan Reset -
36 83..84 Cyan Reset -
37 0..1 Cyan Reset -
37 16..17 Cyan Reset -
37 83..84 Cyan Reset -
38 0..1 Cyan Reset -
38 16..17 Cyan Reset -
38 83..84 Cyan Reset -
39 0..1 Cyan Reset -
39 16..17 Cyan Reset -
39 83..84 Cyan Reset -
40 0..1 Cyan Reset -
40 16..17 Cyan Reset -
40 83..84 Cyan Reset -
41 0..1 Cyan Reset -
41 16..17 Cyan Reset -
41 83..84 Cyan Reset -
42 0..1 Cyan Reset -
42 16..17 Cyan Reset -
42 83..84 Cyan Reset -
43 0..1 Cyan Reset -
43 16..17 Cyan Reset -
43 83..84 Cyan Reset -
44 0..1 Cyan Reset -
44 16..17 Cyan Reset -
44 83..84 Cyan Reset -
45 0..1 Cyan Reset -
45 16..17 Cyan Reset -
45 83..84 Cyan Reset -
46 0..1 Cyan Reset -
46 16..17 Cyan Reset -
46 83..84 Cyan Reset -
47 0..1 Cyan Reset -
47 16..17 Cyan Reset -
47 83..84 Cyan Reset -
48 0..1 Cyan Reset -
48 16..17 Cyan Reset -
48 83..84 Cyan Reset -
49 0..17 Cyan Reset -
49 18..32 Reset Reset DIM
49 83..84 Cyan Reset -
50 0..16 Reset Reset DIM
50 16..84 Cyan Reset -
50 84..87 Reset Reset DIM
