crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_herdr_flag_only_root_listed_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  2 repos · 1 file · 1 hunk  herdr 0.8.2  [Accept All]                            watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│⚑ alpha                   │nothing pending in alpha · agent done                                  │"
"│  main · 0 files          │  main · 0 files                                                       │"
"│  agent done              │                                                                       │"
"│──────────────────────────│                                                                       │"
"│notes                     │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  ^A accept all  d ack  g jump  t show empty  Tab focus  ? help  q quit  "
