crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_herdr_ready_ack_dims_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  herdr 0.8.2  [Accept All]                          watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│⚑ alpha                   │alpha  main · 3 files                                                  │"
"│  main · 3 files          │~/W/alpha                                                              │"
"│  M f1  +1 −1             │  M f1  +1 −1                                                          │"
"│  M f2  +1 −0             │  M f2  +1 −0                                                          │"
"│  M parse.rs  +10 −2      │  M src/parse.rs  +10 −2                                               │"
"│──────────────────────────│                                                                       │"
"│● beta                    │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  A accept all in alpha  ^A accept all  d ack  g jump  t hide empty  ? help  q quit"
