crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_herdr_scope_notice_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  1 repo · 3 files · 5 hunks  herdr 0.8.2  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │select a file (↑↓ or click) · ? for help                               │"
"│  main · 3 files          │                                                                       │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  n/p hunk  ? help  q quit              scope: alpha · 2 repos hidden (w shows all)"
