crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_herdr_scope_notice_with_status_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  1 repo · 2 files · 2 hunks  herdr 0.8.2  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │select a file (↑↓ or click) · ? for help                               │"
"│  main · 2 files          │                                                                       │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"accepted f1 in alpha · 0s                                scope: alpha · 2 repos hidden (w shows all)"
